--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,11 @@
   "description" : "This extension will warn you if you have too many tabs open",
   "version" : "0.1.0",
 
+  "background" : {
+    "scripts" : ["main.js"],
+    "persistent" : true
+  },
+
   "browser_action" : {
     "default_icon" : "icon.png",
     "default_popup" : "dialog.html"
