--- a/manifest.json
+++ b/manifest.json
@@ -11,9 +11,12 @@
   },
 
   "browser_action" : {
+    "default_title" : "TabWatch",
     "default_icon" : "icon.png",
     "default_popup" : "dialog.html"
   },
+
+  "minimum_chrome_version" : "38.0",
 
   "permissions" : [
     "tabs"
