added: saves to chrome.storage.sync, setting of tabLimit works

--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,10 @@
 
   "minimum_chrome_version" : "38.0",
 
+  "options_page" : "options.html",
+
   "permissions" : [
-    "tabs"
+    "tabs",
+    "storage"
   ]
 }
